// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field renders a proper number field 1`] = `
<div
  className="field number"
>
  <label
    htmlFor="atlas-content-modeler[geese][age]"
  >
    Age
  </label>
  <br />
  <input
    defaultValue="100"
    id="atlas-content-modeler[geese][age]"
    name="atlas-content-modeler[geese][age]"
    type="number"
  />
</div>
`;

exports[`Field renders a proper text field 1`] = `
<div
  className="field text"
>
  <label
    htmlFor="atlas-content-modeler[geese][firstName]"
  >
    First Name
  </label>
  <br />
  <input
    defaultValue="John"
    id="atlas-content-modeler[geese][firstName]"
    name="atlas-content-modeler[geese][firstName]"
    type="text"
  />
</div>
`;
